# Pathfinder

./: .pre-commit-config.yaml  Cargo.toml  README.md  Student_Rust_Exercise.md
.github/: copilot-instructions.md
.github/workflows/: codeql.yml  release.yml  rust-ci.yml  rust.yml
benches/: pathfinder.rs  pathfinder_cmd_line.rs  pathfinder_data_input.rs  pathfinder_directed_graph.rs  pathfinder_undirected_graph.rs
diary/: README.md
diary/feature/a_star/: 001-diary-initialization.md  002-doctest-docs-review-and-diary-setup.md  003-global-parse-error-module-and-imports.md  004-rename-parse-node-error-to-parse-error.md  005-rename-parse-node-error-file-to-parse-error.md  006-enforce-rust-documentation-requirements-in-instructions.md  007-standardize-diary-entries-to-readme.md  008-extract-invalid-data-input-error.md  009-expand-file-input-documentation-comments.md  010-fix-benchmark-imports-and-polish-file-input-docs.md  011-quick-fix-needless-late-init.md  012-fix-doctest-failures-and-examples.md  013-stage-files-and-create-commit.md  014-rewrite-commit-history-by-topic.md  015-track-commit-per-prompt-in-instructions.md  016-professionalize-readme.md  017-fix-input-format-docs-in-code-and-readme.md  018-fix-remaining-input-format-doc-contradictions.md  019-sync-docs-to-header-based-input-format.md  020-add-production-grade-test-suite-and-ci-hardening.md  021-add-readme-synchronization-rule-to-instructions.md  022-commit-all-current-unstaged-changes.md  023-expand-algorithm-module-and-element-docs-with-doctests.md  024-expand-dijkstra-module-and-element-docs-with-doctests.md  025-expand-graph-trait-module-and-element-docs-with-doctests.md  026-expand-a-star-module-and-element-docs-with-structured-doctests.md  027-require-code-doc-sync-in-instructions.md  028-sync-readme-with-current-project-state.md  029-expand-app-config-docs-with-structured-doctests.md  030-resolve-existing-test-and-doctest-errors.md  031-audit-readme-for-project-wide-sync.md  032-automate-crates-and-github-release-publishing.md  033-apply-pr-feedback-on-a-star-result-invariants.md  034-fix-two-dimensional-neighbors-endpoint-selection.md  035-project-wide-documentation-sweep-with-doctests.md  036-add-two-dimensional-test-file.md  037-expand-two-dimensional-test-graph-fixture.md  038-split-a-star-generics-and-sync-docs.md  039-project-wide-documentation-deepening-with-doctest-sections.md  (+7 more)
src/: lib.rs  main.rs
src/algorithms/: a_asterisk.rs  a_star.rs  algorithm.rs  dijkstra.rs  mod.rs
src/cmd_line/: app_config.rs  mod.rs
src/data_input/: file_input.rs  mod.rs  terminal_input.rs
src/error/: algorithm_error.rs  config_error.rs  mod.rs  parse_error.rs
src/graphs/: default_node.rs  directed.rs  graph.rs  mod.rs  two_dimensional_coordinate_graph.rs  undirected.rs  utils.rs
src/nodes/: default_node.rs  mod.rs  node_types.rs  two_dimensional_node.rs
src/numeric_datatypes/: impl_numeric_datatypes.rs  mod.rs
src/weight_types/: impl_weights.rs  mod.rs  numeric_datatype.rs
test_files/: directed-graph.txt  directed_graph.txt  directed_graph_edge_cases.txt  two_dimensional_graph.txt  two_dimensional_graph_edge_cases.txt  undirected_graph.txt  undirected_graph_edge_cases.txt
tests/: README.md  app_config_integration.rs  dijkstra_integration.rs  file_input_integration.rs  graphs_integration.rs  two_dimensional_node_integration.rs
(+27 files in other folders)
