[package]
name = "pathfinder"
version = "0.1.0"
edition = "2024"
authors = ["Matthis Geißler <matthisgeissler@gmail.com>"]
license = "MIT"
description = "A Rust library for pathfinding algorithms."
readme = "README.md"

[dependencies]
env_logger = "^0.11.8"
log = "^0.4.28"
regex = { version = "^1.12.2", features = [ "logging" ] }
uuid = { version = "^1.18.1", features = ['v4'] }

[[bin]]
name = "pathfinder"
path = "src/main.rs"

[dev-dependencies]
divan = { version = "^0.1.21", all-features = true }

[[bench]]
name = "pathfinder"
harness = false

[[bench]]
name = "pathfinder_directed_graph"
harness = false

[[bench]]
name = "pathfinder_undirected_graph"
harness = false

[[bench]]
name = "pathfinder_cmd_line"
harness = false

[[bench]]
name = "pathfinder_data_input"
harness = false
