[package]
name = "pathfinder"
version = "0.1.0"
edition = "2024"
authors = ["Matthis Geißler <matthisgeissler@gmail.com>"]
license-file = "LICENSE"
description = "A Rust library for pathfinding algorithms."
homepage = "matthisgeissler.pages.dev"
readme = "README.md"
repository = "github.com/M4tt1-Coder/pathfinder"
keywords = ["pathfinding", "algorithms", "rust", "library"]
categories = ["algorithms", "data-structures", "graph-algorithms"]
exclude = ["target", "examples", "tests", "test_files"]

[dependencies]
env_logger = "^0.11.9"
log = "^0.4.29"
regex = { version = "^1.12.3", features = [ "logging" ] }
uuid = { version = "^1.21.0", features = [ 'v4' ] }

[[bin]]
name = "pathfinder"
path = "src/main.rs"

[dev-dependencies]
divan = { version = "^0.1.21" }

[[bench]]
name = "pathfinder"
harness = false

[[bench]]
name = "pathfinder_directed_graph"
harness = false

[[bench]]
name = "pathfinder_undirected_graph"
harness = false

[[bench]]
name = "pathfinder_cmd_line"
harness = false

[[bench]]
name = "pathfinder_data_input"
harness = false
